fix: overflow and name (#444)
* fix: overflow and name

* chore: update subql components

---------

--- a/src/pages/swap/SwapForm.module.css
+++ b/src/pages/swap/SwapForm.module.css
@@ -9,6 +9,7 @@
 
 .stat {
   width: 100%;
+  overflow: auto;
 }
 
 .swapAction {
